# databricks-SGC-Axolotl-examples

./: .gitignore  README.md  pyproject.toml
cli/: README.md
cli/axolotl/: README.md  workload.yaml
cli/axolotl_example_fft-8b-liger-fsdp/: default_accelerate_config.yaml  fft-8b-liger-fsdp.yaml  requirements.yaml  workload.yaml
cli/trl/: README.md  requirements.yaml  sft.py  workload.yaml
notebooks/: axolotl_distributed_run.py  axolotl_olmo3_7b_lora.py  axolotl_qwen_14B_sft_example.py  axolotl_run.py
training_config/: axolotl-fft-llama70b-sdpa-fsdp-v2.yaml  axolotl-fft-qwen32b-sdpa-fsdp-v2.yaml
