[project]
name = "sgc-example"
version = "0.1.0"
description = "SGC Examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=15.4.2,<16",
    "databricks-sdk>=0.65.0",
    "databricks-serverless-gpu-cli @ file:///Users/q.yu/workspace/developments/databricks-SGC-Axolotl-examples/cli/databricks_serverless_gpu_cli-0.0.2-py3-none-any.whl",
    "ipykernel>=6.30.1",
    "mlflow>=2.17,<3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

# No [tool.setuptools] section = no package installation
# This makes pyproject.toml only manage dependencies via uv
